--- a/surveyform.html
+++ b/surveyform.html
@@ -90,7 +90,8 @@
        <label> Favorite Subgenre</label> 
         <select id="dropdown" required>
           <option>(select one)</option>
-          <option>Splatter/Slasher</option>
+          <option>Splatter</option>
+          <option>Slasher</option>
           <option>Horror Comedy</option>
           <option>Gothic Horror</option>
           <option>Horror Animation</option>
